kube/gce/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal
  name: portal
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: portal
  type: NodePort
