kube/gce/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ml-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ml-static-ip
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "midnight-lizard.online"
    http:
      paths:
      - path: /*
        backend:
          serviceName: portal
          servicePort: 80
  - host: "*.midnight-lizard.online"
    http:
      paths:
      - path: /*
        backend:
          serviceName: portal
          servicePort: 80
  - host: "schemes.midnight-lizard.online"
    http:
      paths:
      - path: /*
        backend:
          serviceName: schemes
          servicePort: 80
  - host: "identity.midnight-lizard.online"
    http:
      paths:
      - path: /*
        backend:
          serviceName: identity
          servicePort: 80
